@@ -13,7 +13,7 @@
 		<img src="pic/boom3.gif" alt="gif" align="left"><a href="http://www.eecis.udel.edu/~mills/pictures.html">from <i>Pogo</i>, Walt Kelly</a>
 		<p>We have three, now looking for more.</p>
 		<p>Last update:
-			<!-- #BeginDate format:En2m -->08-Apr-2009  3:28<!-- #EndDate --> 
+			<!-- #BeginDate format:En2m -->22-Apr-2009  17:51<!-- #EndDate --> 
 			UTC</p>
 		<br clear="left">
 	<h4>Related Links</h4>
@@ -64,7 +64,7 @@
 						<p>This would just list the synchronizations state of <tt>ntpd</tt> and the major system events. For a simple reference server, the following minimum message configuration could be useful:</p>
 				</dl>
 			<dd>
-				<p><tt>logconfig=allsync +allclock</tt></p>
+				<p><tt>logconfig allsync +allclock</tt></p>
 				<dl>
 					<dd>
 						<p>This configuration will list all clock information and synchronization information. All other events and messages about peers, system events and so on is suppressed.</p>
